2012-03-07 Riccardo Mottola <rm@gnu.org>

	* Goodies/adgnumailconverter/GNUmakefile
	* Goodies/adserver/GNUmakefile
	* Goodies/adtool/GNUmakefile
	Use TOOL_LIBS instead of LDFLAGS to link the framework library.

	* Goodies/VCFViewer/GNUmakefile
	Use TOOL and GUI libs to link frameworks

2012-02-20: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefiles of the Goodies: Add the ${GNUSTEP_INSTANCE}_INCLUDE_DIRS
	  where necessary, and fix the ${GNUSTEP_INSTANCE}_LDFLAGS where necessary
2012-01-28: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/AddressView/ADPersonView.m
	  setPerson: return if aPerson == nil
	  use NSInteger instead of int to compare safely with
	  NSNotFound
	* Frameworks/AddressView/ADPersonPropertyView.m
	  use NSInteger instead of int to compare safely with
	  NSNotFound
	* Frameworks/Addresses/ADLocalAddressBook.m
	  fix format string
	* AddressManager/Controller.m
	  use NSApplicationTerminateReply, NSTerminateNow, and
	  NSTerminateCancel in applicationShouldTerminate:
	  use NSInteger instead of int to compare safely with
	  NSNotFound
	* Frameworks/Addresses/ADMultiValue.{h|m}
	  Switch return value of -count from unsigned int to
          NSUInteger

2012-01-28 Riccardo Mottola <rm@gnu.org>

	* Frameworks/AddressView/ADPersonView.m:
	Do not set string if note is nil.

2011-05-18 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Addresses/ADRecord.h
	Warning fix (match implementation)