@@ -1,3 +1,8 @@
+2012-03-20 Riccardo Mottola <rm@gnu.org>
+
+	* Frameworks/AddressView/ADPersonView.m
+	When calculating size, take care not to generate negative sizes.
+
 2012-03-07 Riccardo Mottola <rm@gnu.org>
 
 	* Goodies/adgnumailconverter/GNUmakefile
